add tags document
